<resources>
    <!-- Permissions -->
    <string name="permission_rationale_location">
        Access to this device\'s location service is required for BikeShare to function properly.\n
        Click \'OK\' to continue, or click \'CANCEL\' to exit the application.
    </string>
    <string name="location_permission_denied">
        BikeShare requires location permission to function properly.
        Please try again and grant access to use the location.\n
        If the permission has been permanently denied, it can be enabled from the
        System Settings &gt; Apps &gt; \'BikeShare\'.
    </string>
    <string name="permission_required_toast">
        Location permission is required for BikeShare to function properly.
    </string>

    <!-- Location -->
    <string name="location_service_error">
        Could not get the location of this device. Make sure the location service is enabled.
    </string>
    <string name="location_service_required_toast">Make sure location service is enabled before continuing.</string>
    <string name="location_not_read_message">Location has not yet been read. Please try again.</string>

    <!-- Internet -->
    <string name="internet_connection_required">
        No available internet connection detected. Make sure it is enabled before continuing.
    </string>
    <string name="internet_connection_required_toast">
        Make sure an internet connection is available before continuing.
    </string>

    <!-- General -->
    <string name="app_name">BikeShare</string>
    <string name="bike_pairing_success">Pairing succeeded. Bike is now unlocked.</string>
    <string name="button_add_balance">Add money</string>
    <string name="button_add_bike">Add bike</string>
    <string name="button_close">Close</string>
    <string name="button_dialog_pay">Pay</string>
    <string name="button_end_ride">End ride</string>
    <string name="button_pick_end_position">Pick end position</string>
    <string name="button_pick_location">Pick location</string>
    <string name="button_register_bike">Done</string>
    <string name="button_register_lock_id">Register lock</string>
    <string name="button_show_bike_details">Show bike details</string>
    <string name="button_start_ride">Unlock to start ride</string>
    <string name="button_view_bike">View bike</string>
    <string name="button_view_payments">View payments</string>
    <string name="button_view_rides">View rides</string>
    <string name="camera_intent_error_message">No camera app found on device</string>
    <string name="currency_label">$</string>
    <string name="date_time_input_error">End time must be after start time</string>
    <string name="distance_placeholder_text">Distance: %1$.2f km</string>
    <string name="duration_hours_placeholder_text">Duration: %1$.1f hour(s)</string>
    <string name="empty_bike_type_view_text">No bike types found</string>
    <string name="fetch_address_service_not_available">
        Address fetch service not available. Make sure that your device is connected to the internet.
    </string>
    <string name="generic_app_quit_text">Quiting…</string>
    <string name="hours_placeholder_text">%1$.1f hour(s)</string>
    <string name="in_use">In use</string>
    <string name="km_placeholder_text">%1$.2f km</string>
    <string name="label_address_bike">Last known address</string>
    <string name="label_availability_bike">Status</string>
    <string name="label_bike_owner">Owner</string>
    <string name="label_bike_section">Bike</string>
    <string name="label_bikes_section">Bikes</string>
    <string name="label_end_address_section">End address</string>
    <string name="label_end_location">End location</string>
    <string name="label_end_time">End time</string>
    <string name="label_end_time_section">End time</string>
    <string name="label_lock_id_register_bike">Lock id</string>
    <string name="label_photo_register_bike">Photo</string>
    <string name="label_price_detail_bike">Price per hour</string>
    <string name="label_price_register_bike">Price per hour (0–99 $)</string>
    <string name="label_ride_distance_section">Distance</string>
    <string name="label_ride_id_section">Ride id</string>
    <string name="label_ride_price_section">Price</string>
    <string name="label_rider_section">User</string>
    <string name="label_rides_section">Rides</string>
    <string name="label_start_address">Start address</string>
    <string name="label_start_address_section">Start address</string>
    <string name="label_start_time">Start time</string>
    <string name="label_start_time_section">Start time</string>
    <string name="label_type_register_bike">Type</string>
    <string name="marker_end_position_title">End position</string>
    <string name="marker_start_position_title">Start position</string>
    <string name="missing_end_location_error">Please select an end location</string>
    <string name="money_amount_text">$ %1$.2f</string>
    <string name="no_addresses_found_error_message">No nearby address was found</string>
    <string name="no_end_position_selected">No end position selected. Please select one on the map.</string>
    <string name="no_lock_id_error_message">No lock registered</string>
    <string name="no_price_specified_error_message">No price specified</string>
    <string name="not_in_use">Not in use</string>
    <string name="payment_amount_placeholder_text">To pay: $ %1$.2f</string>
    <string name="price_out_of_range_message">Price must be between 0 and 99</string>
    <string name="table_header_ride_start_address">Start address</string>
    <string name="table_header_ride_end_address">End address</string>
    <string name="table_header_ride_distance">Distance</string>
    <string name="table_header_bike_type">Type</string>
    <string name="table_header_bike_position_address">Address</string>
    <string name="table_header_bike_status">Status</string>
    <string name="table_header_rider_name">Rider</string>
    <string name="table_header_payment_amount">Amount</string>
    <string name="title_account">Account</string>
    <string name="title_bike_detail">Bike</string>
    <string name="title_bike_map">Bikes</string>
    <string name="title_bikes_overview">Bikes</string>
    <string name="title_date_picker">Pick a date</string>
    <string name="title_end_position_picker">Pick end position for ride</string>
    <string name="title_overview">Overview</string>
    <string name="title_payment_dialog">Your ride</string>
    <string name="title_register_bike">Register a bike</string>
    <string name="title_ride">Ride</string>
    <string name="title_ride_detail">Ride</string>
    <string name="title_rides_overview">Rides</string>
    <string name="total_amount_text">Total: $ %1$.2f</string>
    <string name="bike_list_empty_view_text">No bikes found</string>
    <string name="ride_list_empty_view_text">No rides found</string>
    <string name="payment_list_empty_view_text">No payments found</string>
</resources>
