<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TableColumnHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/table_header_ride_start_address" />

        <TextView
            style="@style/TableColumnHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="4dp"
            android:text="@string/table_header_ride_end_address"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/TableColumnHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/table_header_ride_distance"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ride_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/ride_list_empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ride_list_empty_view_text"
        android:textStyle="italic"
        android:textAlignment="center" />
</LinearLayout>