<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TableColumnHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/table_header_bike_type" />

        <TextView
            style="@style/TableColumnHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="4dp"
            android:text="@string/table_header_bike_position_address"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/TableColumnHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/table_header_bike_status"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bike_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>